--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,9 @@
 <%- include("partials/header") -%>
 
-<h1 class="site-logo">crypto|<span class="logo-bold">spotter</span></h1>
+<div class="main-body-wrapper">
+  <div class="logo-wrapper">
+    <h1 class="site-logo">crypto|<span class="logo-bold">spotter</span></h1>
+  </div>
+</div>
 
 <%- include("partials/footer") -%>
