--- a/public/css/fonts.css
+++ b/public/css/fonts.css
@@ -2,14 +2,14 @@
 
 @font-face {
   font-family: "Quicksand-Light";
-  src: url("/fonts/Quicksand-VariableFont_wght.ttf");
+  src: url("/fonts/Quicksand-Light.ttf");
   font-style: normal;
   font-weight: 300;
 }
 
 @font-face {
   font-family: "Quicksand-Bold";
-  src: url("/fonts/Quicksand-VariableFont_wght.ttf");
+  src: url("/fonts/Quicksand-Bold.ttf");
   font-style: normal;
   font-weight: 700;
 }
