--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,6 +18,7 @@ body {
 
 .site-logo {
   font-family: "Quicksand-Light";
+  font-weight: 300;
   font-size: 5rem;
   color: #ffffff;
   margin-left: auto;
