Add box for crypto  prices and add styles to the box.

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="/css/fonts.css">
     <link rel="stylesheet" href="/css/styles.css">
 
-    <title>CryptoSpotter | Quick Cryptocurrency Price Chart</title>
+    <title>CryptoSpotter | Your Quick Cryptocurrency Dashboard</title>
   </head>
   <body>
