--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,9 +1,16 @@
 <%- include("partials/header") -%>
 
 <div class="main-body-wrapper">
+
   <div class="logo-wrapper">
     <h1 class="site-logo">crypto|<span class="logo-bold">spotter</span></h1>
   </div>
+
+  <div class="prices-box">
+    
+  </div>
+
+
 </div>
 
 <%- include("partials/footer") -%>
