--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
 
-    <link rel="stylesheet" href="/css/fonts.css">
-    <link rel="stylesheet" href="/css/styles.css">
+<head>
+  <meta charset="utf-8">
 
-    <title>CryptoSpotter | Your Quick Cryptocurrency Dashboard</title>
-  </head>
-  <body>
+  <link rel="stylesheet" href="/css/fonts.css">
+  <link rel="stylesheet" href="/css/styles.css">
+
+  <title>CryptoSpotter | Your Quick Cryptocurrency Dashboard</title>
+</head>
+
+<body>
+  <div class="main-body-wrapper">
