--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,10 +2,17 @@
 
 
 <div class="logo-wrapper">
-  <h1 class="site-logo">crypto|<span class="logo-bold">spotter</span></h1>
+  <h1 class="site-logo">
+    <a href="/api">
+      crypto|<span class="logo-bold">spotter</span>
+    </a>
+  </h1>
 </div>
 
+
 <div class="prices-box">
+  <p>Name</p>
+  <hr class="price-divider">
 
 </div>
 
