--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,11 +8,11 @@ a {
 }
 
 .main-body-wrapper {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background: linear-gradient(135deg, #000CF4, #345CE4, #0DA7AD);
-  background-size: 150% 150%;
-  animation: backgroundAnimation 4.5s ease-in-out infinite;
+  background-size: 175% 175%;
+  animation: backgroundAnimation 4s ease-in-out infinite;
   text-align: center;
 }
 
@@ -52,13 +52,16 @@ a {
   }
 }
 
+.table-wrapper {
+  padding-bottom: 6rem;
+}
+
 .prices-box {
   font-family: "OpenSans-Bold", sans-serif;
   font-weight: bold;
   font-size: 0.9rem;
   background-color: #ffffff;
   width: 50%;
-  height: 20%;
   margin: auto;
   margin-top: 6rem;
   padding-top: 0.15rem;
@@ -66,11 +69,49 @@ a {
   filter: drop-shadow(0rem 0.25rem 0.3rem rgba(0, 0, 0, 0.25));
 }
 
+.prices-box table {
+  width: 100%;
+}
+
 .price-divider {
-  background-color: #BDBDBD;
+  background-color: #E8E8E8;
   border: none;
-  width: 95%;
+  width: 90%;
   height: 1px;
+}
+
+.price-row {
+  font-family: "OpenSans", sans-serif;
+  font-weight: normal;
+  font-size: 1rem;
+}
+
+.price-row img {
+  height: 1.5rem;
+  width: auto;
+}
+
+th, td {
+  height: 1.8rem;
+  vertical-align: middle;
+}
+
+.crypto-id {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
+.crypto-symbol {
+  font-size: 0.8em;
+  color: #A2A2A2;
+}
+
+.negative-change {
+  color: red;
+}
+
+.positive-change {
+  color: green;
 }
 
 .footer {
