--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,67 +11,73 @@
 
 <div class="table-wrapper">
 
-<div class="prices-box">
+  <div class="prices-box">
 
-  <table>
+    <table>
 
-    <thead>
-      <tr>
-        <th>Symbol</th>
-        <th>Price</th>
-        <th>24H %</th>
-        <th>Market Cap</th>
-      </tr>
-    </thead>
+      <thead>
+        <tr>
+          <th>Symbol</th>
+          <th>Price</th>
+          <th>24H %</th>
+          <th>Market Cap</th>
+        </tr>
+      </thead>
 
-    <tbody>
+      <tbody>
 
-      <tr>
-        <td colspan="5">
-          <hr class="price-divider">
-        </td>
-      </tr>
+        <tr>
+          <td colspan="5">
+            <hr class="price-divider">
+          </td>
+        </tr>
 
-      <% for (var i = 0; i < 30; i++) { %>
-  <tr class="price-row">
-    <td>
-      <img src="<%= priceData[i].image %>">
-      <span class="crypto-id"><%= priceData[i].id %></span>
-      <span class="crypto-symbol"><%= priceData[i].symbol %></span>
-    </td>
-    <td>
-      <%= priceData[i].current_price %>
-    </td>
-    <td
-    <% if (parseFloat(priceData[i].price_change_percentage_24h_in_currency) >= 0) { %>
-      class="positive-change"
-    <% } else { %>
-      class="negative-change"
-    <%} %>
-    >
-      <%= priceData[i].price_change_percentage_24h_in_currency %>
-    </td>
-    <td>
-      <%= priceData[i].market_cap %>
-    </td>
-  </tr>
+        <% for (var i = 0; i < 30; i++) { %>
+        <tr class="price-row">
+          <td>
+            <div class="cell-wrapper">
+              <img src="<%= priceData[i].image %>">
+              <span class="crypto-id"><%= priceData[i].id %></span>
+              <span class="crypto-symbol"><%= priceData[i].symbol %></span>
+            </div>
+          </td>
+          <td>
+            <div class="cell-wrapper">
+              <%= priceData[i].current_price %>
+            </div>
+          </td>
+          <td <% if (parseFloat(priceData[i].price_change_percentage_24h_in_currency) >= 0) { %> class="positive-change" <% } else { %> class="negative-change" <%} %>>
+            <div class="cell-wrapper">
+              <%= priceData[i].price_change_percentage_24h_in_currency %>
+            </div>
+          </td>
+          <td>
+            <div class="cell-wrapper">
+              <%= priceData[i].market_cap %>
+            </div>
 
-  <% if (i < 29) { %>
-    <tr>
-      <td colspan="5">
-        <hr class="price-divider">
-      </td>
-    </tr>
-  <% } %>
+          </td>
+        </tr>
 
-<% } %>
+        <% if (i < 29) { %>
+        <tr>
+          <td colspan="5">
+            <div class="cell-wrapper">
+              <hr class="price-divider">
+            </div>
+
+          </td>
+        </tr>
+        <% } %>
+
+        <% } %>
 
 
-    </tbody>
+      </tbody>
 
-  </table>
+    </table>
 
-</div>
+  </div>
 </div>
 
 
