Fix footer placement.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -125,9 +125,11 @@ th, td {
   font-family: "Quicksand-Light", sans-serif;
   font-size: 0.8rem;
   color: #ffffff;
-  position: absolute;
-  width: 100%;
-  bottom: 0px;
+  padding-bottom: 2rem;
+}
+
+.footer p {
+  margin: 0;
 }
 
 
