--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <p>Site designed and created 2022 by Jerry Lee Melton</p>
+  <p>Site designed and created by Jerry Lee Melton, 2022</p>
 </footer>
 
 </div>
