Clean up code. Remove unnecessary modules. Add comments in app.js

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 
 <div class="logo-wrapper">
   <h1 class="site-logo">
-    <a href="/api">
+    <a href="/">
       crypto|<span class="logo-bold">spotter</span>
     </a>
   </h1>
